--- a/template.html
+++ b/template.html
@@ -62,6 +62,8 @@
       </div>
     </main>
 
+    <div style="width: 200px; height: 200px; background: balck"></div>
+
     <div class="information"><!-- info based on air quality--></div>
 
     <div class="links">
