--- a/template.html
+++ b/template.html
@@ -70,7 +70,7 @@
       >
       |
       <a href="https://www.instagram.com/markkmit/"> &nbsp Instagram &nbsp</a> |
-      <a href="https://mark1yan0.github.io/protfolio-repo/">
+      <a href="https://mark1yan0.github.io/portfolio-repo/">
         &nbsp Portfolio &nbsp</a
       >
     </div>
